[project]
name = "mcp_server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-groq>=0.3.8",
    "mcp[cli]>=1.18.0",
    "mcp-cli>=0.8.4",
    "mcp-use>=1.2.6",
    "httpx>=0.28.1",
    "fastmcp>=2.12.4",
    "nest-asyncio>=1.6.0",
    "streamlit>=1.50.0",
    "pandas>=2.2.3",
]
